--- a/html/portfolio_kr.html
+++ b/html/portfolio_kr.html
@@ -94,12 +94,12 @@ h1{
 					<li>md5 라이브러리를 이용한 gravatar제작</li>
 					<li>werkzeug.security를 이용한 Hashing 처리</li>
 				</ul>
-				<p><span><iframe width="800" height="500" src="vid/flask_pj.mp4" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></span></p>
+				<p><span><iframe width="800" height="500" src="vid/flask_pj.mp4" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen autoplay="0"></iframe></span></p>
 		</div>
-		
 
 		<div class="container" id="jsp">
 				<p><span><b><mark>JSP, DB를 이용한 일본드라마 소개 홈페이지 제작</mark></b></span></p>
+				<button class="btn btn-warning btn-lg" onclick="location.href='https://github.com/mina0502/portfolio/tree/main/jsp'">이동</button>
 				<ul>
 					<li>MySQL을 사용하여 드라마 검색, 표시, 로그인, 로그아웃, 회원수정, 탈퇴 구현</li>
 					<li>bootStrap.min.css 라이브러리 이용</li>
@@ -107,7 +107,7 @@ h1{
 					<li>bundle을 이용하여 한・영 버전 홈페이지 구현</li>
 					<li>commons codec 라이브러리를 이용한 AES256형식의 데이터 암/복호화 기능 구현</li>
 				</ul>
-				<p><span><iframe width="800" height="500" src="vid/jsp.mp4" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></span></p>
+				<p><span><iframe width="800" height="500" src="vid/jsp.mp4" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen autoplay="0"></iframe></span></p>
 		</div>
 
 
@@ -130,7 +130,7 @@ h1{
 					<li>MCP2515를 이용한 CAN 통신 데이터 입 출력</li>
 					<li>J1939 표준규격에 맞춰 제작</li>
 				</ul>
-				<p><span><iframe width="800" height="500" src="vid/ecu_pj.mp4" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></span></p>
+				<p><span><iframe width="800" height="500" src="vid/ecu_pj.mp4" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen autoplay="0"></iframe></span></p>
 		</div>
 
 		
